// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TemplateDashboards|TableUtils formatCSVData when "mirwald-calculation" FF is off formats table data 1`] = `
Array [
  Object {
    "% adult height Z": "-0.79",
    "% adult height att.": "91.6",
    "Athlete": "A Athlete One",
    "Chrono age
at measurement": "15.0",
    "Est. adult height
(cm)": "156.21",
    "Est. adult height
Higher 90% Conf.": "162.03",
    "Est. adult height
Lower 90% Conf.": "150.39",
    "Height
(cm)": "-",
    "Maturity status": "On time",
    "Most recent measurement": "11/21/2023",
    "Weight
(kg)": "-",
  },
  Object {
    "% adult height Z": "-1.42",
    "% adult height att.": "89.3",
    "Athlete": "B Athlete Two",
    "Chrono age
at measurement": "15.0",
    "Est. adult height
(cm)": "170.53",
    "Est. adult height
Higher 90% Conf.": "176.35",
    "Est. adult height
Lower 90% Conf.": "164.71",
    "Height
(cm)": "-",
    "Maturity status": "On time",
    "Most recent measurement": "11/21/2023",
    "Weight
(kg)": "-",
  },
]
`;

exports[`TemplateDashboards|TableUtils formatCSVData when "mirwald-calculation" FF is on formats table data 1`] = `
Array [
  Object {
    "% adult height Z": "-0.79",
    "% adult height att.": "91.6",
    "Athlete": "A Athlete One",
    "Chrono age
at measurement": "15.0",
    "Est. adult height
(cm)": "156.21",
    "Est. adult height
Higher 90% Conf.": "162.03",
    "Est. adult height
Lower 90% Conf.": "150.39",
    "Height
(cm)": "-",
    "Maturity offset": "-6.889",
    "Maturity status": "On time",
    "Most recent measurement": "11/21/2023",
    "Predicted age at PHV": "21.6",
    "Predicted date of PHV": "10/09/2030",
    "Status
Mirwald": "Late",
    "Weight
(kg)": "-",
  },
  Object {
    "% adult height Z": "-1.42",
    "% adult height att.": "89.3",
    "Athlete": "B Athlete Two",
    "Chrono age
at measurement": "15.0",
    "Est. adult height
(cm)": "170.53",
    "Est. adult height
Higher 90% Conf.": "176.35",
    "Est. adult height
Lower 90% Conf.": "164.71",
    "Height
(cm)": "-",
    "Maturity offset": "-4.512",
    "Maturity status": "On time",
    "Most recent measurement": "11/21/2023",
    "Predicted age at PHV": "19.2",
    "Predicted date of PHV": "05/25/2028",
    "Status
Mirwald": "Late",
    "Weight
(kg)": "-",
  },
]
`;

exports[`TemplateDashboards|TableUtils formatCSVData when ‘g-and-m-new-columns’ FF is off formats table data correctly 1`] = `
Array [
  Object {
    "% adult height Z": "-0.79",
    "% adult height att.": "91.6",
    "Athlete": "A Athlete One",
    "Chrono age
at measurement": "15.0",
    "Est. adult height
(cm)": "156.21",
    "Est. adult height
Higher 90% Conf.": "162.03",
    "Est. adult height
Lower 90% Conf.": "150.39",
    "Height
(cm)": "-",
    "Maturity status": "On time",
    "Most recent measurement": "11/21/2023",
    "Weight
(kg)": "-",
  },
  Object {
    "% adult height Z": "-1.42",
    "% adult height att.": "89.3",
    "Athlete": "B Athlete Two",
    "Chrono age
at measurement": "15.0",
    "Est. adult height
(cm)": "170.53",
    "Est. adult height
Higher 90% Conf.": "176.35",
    "Est. adult height
Lower 90% Conf.": "164.71",
    "Height
(cm)": "-",
    "Maturity status": "On time",
    "Most recent measurement": "11/21/2023",
    "Weight
(kg)": "-",
  },
]
`;

exports[`TemplateDashboards|TableUtils formatCSVData when ‘g-and-m-new-columns’ FF is on formats table data correctly 1`] = `
Array [
  Object {
    "% adult height Z": "-0.79",
    "% adult height att.": "91.6",
    "Athlete": "A Athlete One",
    "Bio age
at measurement": 15,
    "Chrono age
at measurement": "15.0",
    "Est. adult height
(cm)": "156.21",
    "Est. adult height
Higher 90% Conf.": "162.03",
    "Est. adult height
Lower 90% Conf.": "150.39",
    "Height
(cm)": "-",
    "Height velocity
cm/year": "10.00",
    "Maturity status": "On time",
    "Most recent measurement": "11/21/2023",
    "Position": "Forward",
    "RAE
DOB quarter": "-",
    "Seated height
cm": "-",
    "Seated height / height ratio
%": "10.00",
    "Weight
(kg)": "-",
    "Weight velocity
kg/year": "12.00",
  },
  Object {
    "% adult height Z": "-1.42",
    "% adult height att.": "89.3",
    "Athlete": "B Athlete Two",
    "Bio age
at measurement": 15,
    "Chrono age
at measurement": "15.0",
    "Est. adult height
(cm)": "170.53",
    "Est. adult height
Higher 90% Conf.": "176.35",
    "Est. adult height
Lower 90% Conf.": "164.71",
    "Height
(cm)": "-",
    "Height velocity
cm/year": "10.00",
    "Maturity status": "On time",
    "Most recent measurement": "11/21/2023",
    "Position": "Forward",
    "RAE
DOB quarter": "-",
    "Seated height
cm": "-",
    "Seated height / height ratio
%": "10.00",
    "Weight
(kg)": "-",
    "Weight velocity
kg/year": "12.00",
  },
]
`;

exports[`TemplateDashboards|TableUtils getGrowthAndMaturationColumns when "mirwald-calculation" FF is off returns the list of columns excluding the mirwald columns 1`] = `
Array [
  Object {
    "id": "athlete_id",
    "label": "Athlete",
  },
  Object {
    "id": "most_recent_measurement",
    "label": "Most recent measurement",
  },
  Object {
    "id": "g_and_m_decimal_age",
    "label": "Chrono age",
    "subheading": "at measurement",
  },
  Object {
    "id": "g_and_m_height",
    "label": "Height",
    "subheading": "(cm)",
  },
  Object {
    "id": "g_and_m_weight",
    "label": "Weight",
    "subheading": "(kg)",
  },
  Object {
    "id": "g_and_m_percent_adult_height_att",
    "label": "% adult height att.",
  },
  Object {
    "id": "g_and_m_percent_adult_height_z",
    "label": "% adult height Z",
  },
  Object {
    "id": "g_and_m_khamis_roche_status",
    "label": "Maturity status",
  },
  Object {
    "id": "g_and_m_est_adult_height",
    "label": "Est. adult height",
    "subheading": "(cm)",
  },
  Object {
    "id": "g_and_m_est_adult_height_l_90",
    "label": "Est. adult height",
    "subheading": "Lower 90% Conf.",
  },
  Object {
    "id": "g_and_m_est_adult_height_u_90",
    "label": "Est. adult height",
    "subheading": "Higher 90% Conf.",
  },
]
`;

exports[`TemplateDashboards|TableUtils getGrowthAndMaturationColumns when "mirwald-calculation" FF is on returns the list of columns including the mirwald columns 1`] = `
Array [
  Object {
    "id": "athlete_id",
    "label": "Athlete",
  },
  Object {
    "id": "most_recent_measurement",
    "label": "Most recent measurement",
  },
  Object {
    "id": "g_and_m_decimal_age",
    "label": "Chrono age",
    "subheading": "at measurement",
  },
  Object {
    "id": "g_and_m_height",
    "label": "Height",
    "subheading": "(cm)",
  },
  Object {
    "id": "g_and_m_weight",
    "label": "Weight",
    "subheading": "(kg)",
  },
  Object {
    "id": "g_and_m_maturity_offset_status",
    "label": "Status",
    "subheading": "Mirwald",
  },
  Object {
    "id": "g_and_m_maturity_offset",
    "label": "Maturity offset",
  },
  Object {
    "id": "g_and_m_phv_date",
    "label": "Predicted date of PHV",
  },
  Object {
    "id": "g_and_m_phv_age",
    "label": "Predicted age at PHV",
  },
  Object {
    "id": "g_and_m_percent_adult_height_att",
    "label": "% adult height att.",
  },
  Object {
    "id": "g_and_m_percent_adult_height_z",
    "label": "% adult height Z",
  },
  Object {
    "id": "g_and_m_khamis_roche_status",
    "label": "Maturity status",
  },
  Object {
    "id": "g_and_m_est_adult_height",
    "label": "Est. adult height",
    "subheading": "(cm)",
  },
  Object {
    "id": "g_and_m_est_adult_height_l_90",
    "label": "Est. adult height",
    "subheading": "Lower 90% Conf.",
  },
  Object {
    "id": "g_and_m_est_adult_height_u_90",
    "label": "Est. adult height",
    "subheading": "Higher 90% Conf.",
  },
]
`;

exports[`TemplateDashboards|TableUtils getGrowthAndMaturationColumns when ‘g-and-m-new-columns’ FF is off doesn’t return the list of columns excluding additional g&m columns 1`] = `
Array [
  Object {
    "id": "athlete_id",
    "label": "Athlete",
  },
  Object {
    "id": "most_recent_measurement",
    "label": "Most recent measurement",
  },
  Object {
    "id": "g_and_m_decimal_age",
    "label": "Chrono age",
    "subheading": "at measurement",
  },
  Object {
    "id": "g_and_m_height",
    "label": "Height",
    "subheading": "(cm)",
  },
  Object {
    "id": "g_and_m_weight",
    "label": "Weight",
    "subheading": "(kg)",
  },
  Object {
    "id": "g_and_m_percent_adult_height_att",
    "label": "% adult height att.",
  },
  Object {
    "id": "g_and_m_percent_adult_height_z",
    "label": "% adult height Z",
  },
  Object {
    "id": "g_and_m_khamis_roche_status",
    "label": "Maturity status",
  },
  Object {
    "id": "g_and_m_est_adult_height",
    "label": "Est. adult height",
    "subheading": "(cm)",
  },
  Object {
    "id": "g_and_m_est_adult_height_l_90",
    "label": "Est. adult height",
    "subheading": "Lower 90% Conf.",
  },
  Object {
    "id": "g_and_m_est_adult_height_u_90",
    "label": "Est. adult height",
    "subheading": "Higher 90% Conf.",
  },
]
`;

exports[`TemplateDashboards|TableUtils getGrowthAndMaturationColumns when ‘g-and-m-new-columns’ FF is on returns the list of columns including additional g&m columns 1`] = `
Array [
  Object {
    "id": "athlete_id",
    "label": "Athlete",
  },
  Object {
    "id": "position",
    "label": "Position",
  },
  Object {
    "id": "most_recent_measurement",
    "label": "Most recent measurement",
  },
  Object {
    "id": "g_and_m_decimal_age",
    "label": "Chrono age",
    "subheading": "at measurement",
  },
  Object {
    "id": "bio_age",
    "label": "Bio age",
    "subheading": "at measurement",
  },
  Object {
    "id": "g_and_m_height",
    "label": "Height",
    "subheading": "(cm)",
  },
  Object {
    "id": "g_and_m_weight",
    "label": "Weight",
    "subheading": "(kg)",
  },
  Object {
    "id": "season_dob_quartile",
    "label": "RAE",
    "subheading": "DOB quarter",
  },
  Object {
    "id": "g_and_m_percent_adult_height_att",
    "label": "% adult height att.",
  },
  Object {
    "id": "g_and_m_percent_adult_height_z",
    "label": "% adult height Z",
  },
  Object {
    "id": "g_and_m_khamis_roche_status",
    "label": "Maturity status",
  },
  Object {
    "id": "g_and_m_est_adult_height",
    "label": "Est. adult height",
    "subheading": "(cm)",
  },
  Object {
    "id": "g_and_m_est_adult_height_l_90",
    "label": "Est. adult height",
    "subheading": "Lower 90% Conf.",
  },
  Object {
    "id": "g_and_m_est_adult_height_u_90",
    "label": "Est. adult height",
    "subheading": "Higher 90% Conf.",
  },
  Object {
    "id": "g_and_m_height_velocity",
    "label": "Height velocity",
    "subheading": "cm/year",
  },
  Object {
    "id": "g_and_m_weight_velocity",
    "label": "Weight velocity",
    "subheading": "kg/year",
  },
  Object {
    "id": "g_and_m_av_seated_height",
    "label": "Seated height",
    "subheading": "cm",
  },
  Object {
    "id": "g_and_m_seated_height_ratio",
    "label": "Seated height / height ratio",
    "subheading": "%",
  },
]
`;

exports[`TemplateDashboards|TableUtils getGrowthAndMaturationColumns when ‘growth-and-maturation-pl-configuration’ FF is off doesn’t return the list of columns including estimated adult height lower and higher confidence columns 1`] = `
Array [
  Object {
    "id": "athlete_id",
    "label": "Athlete",
  },
  Object {
    "id": "most_recent_measurement",
    "label": "Most recent measurement",
  },
  Object {
    "id": "g_and_m_decimal_age",
    "label": "Chrono age",
    "subheading": "at measurement",
  },
  Object {
    "id": "g_and_m_height",
    "label": "Height",
    "subheading": "(cm)",
  },
  Object {
    "id": "g_and_m_weight",
    "label": "Weight",
    "subheading": "(kg)",
  },
  Object {
    "id": "g_and_m_percent_adult_height_att",
    "label": "% adult height att.",
  },
  Object {
    "id": "g_and_m_percent_adult_height_z",
    "label": "% adult height Z",
  },
  Object {
    "id": "g_and_m_khamis_roche_status",
    "label": "Maturity status",
  },
  Object {
    "id": "g_and_m_est_adult_height",
    "label": "Est. adult height",
    "subheading": "(cm)",
  },
  Object {
    "id": "g_and_m_est_adult_height_l_90",
    "label": "Est. adult height",
    "subheading": "Lower 90% Conf.",
  },
  Object {
    "id": "g_and_m_est_adult_height_u_90",
    "label": "Est. adult height",
    "subheading": "Higher 90% Conf.",
  },
]
`;

exports[`TemplateDashboards|TableUtils getGrowthAndMaturationColumns when ‘growth-and-maturation-pl-configuration’ FF is on returns the list of columns including estimated adult height lower and higher confidence columns 1`] = `
Array [
  Object {
    "id": "athlete_id",
    "label": "Athlete",
  },
  Object {
    "id": "most_recent_measurement",
    "label": "Most recent measurement",
  },
  Object {
    "id": "g_and_m_decimal_age",
    "label": "Chrono age",
    "subheading": "at measurement",
  },
  Object {
    "id": "g_and_m_height",
    "label": "Height",
    "subheading": "(cm)",
  },
  Object {
    "id": "g_and_m_weight",
    "label": "Weight",
    "subheading": "(kg)",
  },
  Object {
    "id": "g_and_m_percent_adult_height_att",
    "label": "% adult height att.",
  },
  Object {
    "id": "g_and_m_percent_adult_height_z",
    "label": "% adult height Z",
  },
  Object {
    "id": "g_and_m_khamis_roche_status",
    "label": "Maturity status",
  },
  Object {
    "id": "g_and_m_est_adult_height_l_50",
    "label": "Est. adult height",
    "subheading": "Lower 50% Conf.",
  },
  Object {
    "id": "g_and_m_est_adult_height_u_50",
    "label": "Est. adult height",
    "subheading": "Higher 50% Conf.",
  },
  Object {
    "id": "g_and_m_est_adult_height",
    "label": "Est. adult height",
    "subheading": "(cm)",
  },
  Object {
    "id": "g_and_m_est_adult_height_l_90",
    "label": "Est. adult height",
    "subheading": "Lower 90% Conf.",
  },
  Object {
    "id": "g_and_m_est_adult_height_u_90",
    "label": "Est. adult height",
    "subheading": "Higher 90% Conf.",
  },
]
`;

exports[`TemplateDashboards|TableUtils sortData sorts for "ASC" for athlete_id 1`] = `
Array [
  Object {
    "athlete_id": 50980,
    "bio_age": 15,
    "g_and_m_decimal_age": 15.01,
    "g_and_m_est_adult_height": 156.21,
    "g_and_m_est_adult_height_l_50": 153.91,
    "g_and_m_est_adult_height_l_90": 150.39,
    "g_and_m_est_adult_height_u_50": 158.51,
    "g_and_m_est_adult_height_u_90": 162.03,
    "g_and_m_height_velocity": 10,
    "g_and_m_khamis_roche_status": "on time",
    "g_and_m_maturity_offset": -6.88873995,
    "g_and_m_maturity_offset_status": "late",
    "g_and_m_percent_adult_height_att": 91.64,
    "g_and_m_percent_adult_height_z": -0.79144,
    "g_and_m_phv_age": 21.599,
    "g_and_m_phv_date": "2030-10-09T16:47:20Z",
    "g_and_m_seated_height_ratio": 10,
    "g_and_m_weight_velocity": 12,
    "most_recent_measurement": "2023-11-21T16:47:20Z",
    "position": "Forward",
  },
  Object {
    "athlete_id": 81233,
    "bio_age": 15,
    "g_and_m_decimal_age": 15.01,
    "g_and_m_est_adult_height": 170.53,
    "g_and_m_est_adult_height_l_50": 168.23,
    "g_and_m_est_adult_height_l_90": 164.71,
    "g_and_m_est_adult_height_u_50": 172.83,
    "g_and_m_est_adult_height_u_90": 176.35,
    "g_and_m_height_velocity": 10,
    "g_and_m_khamis_roche_status": "on time",
    "g_and_m_maturity_offset": -4.51152788,
    "g_and_m_maturity_offset_status": "late",
    "g_and_m_percent_adult_height_att": 89.28,
    "g_and_m_percent_adult_height_z": -1.42246,
    "g_and_m_phv_age": 19.222,
    "g_and_m_phv_date": "2028-05-25T16:47:24Z",
    "g_and_m_seated_height_ratio": 10,
    "g_and_m_weight_velocity": 12,
    "most_recent_measurement": "2023-11-21T16:47:24Z",
    "position": "Forward",
  },
]
`;

exports[`TemplateDashboards|TableUtils sortData sorts for "ASC" for other props 1`] = `
Array [
  Object {
    "athlete_id": 81233,
    "bio_age": 15,
    "g_and_m_decimal_age": 15.01,
    "g_and_m_est_adult_height": 170.53,
    "g_and_m_est_adult_height_l_50": 168.23,
    "g_and_m_est_adult_height_l_90": 164.71,
    "g_and_m_est_adult_height_u_50": 172.83,
    "g_and_m_est_adult_height_u_90": 176.35,
    "g_and_m_height_velocity": 10,
    "g_and_m_khamis_roche_status": "on time",
    "g_and_m_maturity_offset": -4.51152788,
    "g_and_m_maturity_offset_status": "late",
    "g_and_m_percent_adult_height_att": 89.28,
    "g_and_m_percent_adult_height_z": -1.42246,
    "g_and_m_phv_age": 19.222,
    "g_and_m_phv_date": "2028-05-25T16:47:24Z",
    "g_and_m_seated_height_ratio": 10,
    "g_and_m_weight_velocity": 12,
    "most_recent_measurement": "2023-11-21T16:47:24Z",
    "position": "Forward",
  },
  Object {
    "athlete_id": 50980,
    "bio_age": 15,
    "g_and_m_decimal_age": 15.01,
    "g_and_m_est_adult_height": 156.21,
    "g_and_m_est_adult_height_l_50": 153.91,
    "g_and_m_est_adult_height_l_90": 150.39,
    "g_and_m_est_adult_height_u_50": 158.51,
    "g_and_m_est_adult_height_u_90": 162.03,
    "g_and_m_height_velocity": 10,
    "g_and_m_khamis_roche_status": "on time",
    "g_and_m_maturity_offset": -6.88873995,
    "g_and_m_maturity_offset_status": "late",
    "g_and_m_percent_adult_height_att": 91.64,
    "g_and_m_percent_adult_height_z": -0.79144,
    "g_and_m_phv_age": 21.599,
    "g_and_m_phv_date": "2030-10-09T16:47:20Z",
    "g_and_m_seated_height_ratio": 10,
    "g_and_m_weight_velocity": 12,
    "most_recent_measurement": "2023-11-21T16:47:20Z",
    "position": "Forward",
  },
]
`;

exports[`TemplateDashboards|TableUtils sortData sorts for "DESC" for athlete_id 1`] = `
Array [
  Object {
    "athlete_id": 81233,
    "bio_age": 15,
    "g_and_m_decimal_age": 15.01,
    "g_and_m_est_adult_height": 170.53,
    "g_and_m_est_adult_height_l_50": 168.23,
    "g_and_m_est_adult_height_l_90": 164.71,
    "g_and_m_est_adult_height_u_50": 172.83,
    "g_and_m_est_adult_height_u_90": 176.35,
    "g_and_m_height_velocity": 10,
    "g_and_m_khamis_roche_status": "on time",
    "g_and_m_maturity_offset": -4.51152788,
    "g_and_m_maturity_offset_status": "late",
    "g_and_m_percent_adult_height_att": 89.28,
    "g_and_m_percent_adult_height_z": -1.42246,
    "g_and_m_phv_age": 19.222,
    "g_and_m_phv_date": "2028-05-25T16:47:24Z",
    "g_and_m_seated_height_ratio": 10,
    "g_and_m_weight_velocity": 12,
    "most_recent_measurement": "2023-11-21T16:47:24Z",
    "position": "Forward",
  },
  Object {
    "athlete_id": 50980,
    "bio_age": 15,
    "g_and_m_decimal_age": 15.01,
    "g_and_m_est_adult_height": 156.21,
    "g_and_m_est_adult_height_l_50": 153.91,
    "g_and_m_est_adult_height_l_90": 150.39,
    "g_and_m_est_adult_height_u_50": 158.51,
    "g_and_m_est_adult_height_u_90": 162.03,
    "g_and_m_height_velocity": 10,
    "g_and_m_khamis_roche_status": "on time",
    "g_and_m_maturity_offset": -6.88873995,
    "g_and_m_maturity_offset_status": "late",
    "g_and_m_percent_adult_height_att": 91.64,
    "g_and_m_percent_adult_height_z": -0.79144,
    "g_and_m_phv_age": 21.599,
    "g_and_m_phv_date": "2030-10-09T16:47:20Z",
    "g_and_m_seated_height_ratio": 10,
    "g_and_m_weight_velocity": 12,
    "most_recent_measurement": "2023-11-21T16:47:20Z",
    "position": "Forward",
  },
]
`;

exports[`TemplateDashboards|TableUtils sortData sorts for "DESC" for other props 1`] = `
Array [
  Object {
    "athlete_id": 50980,
    "bio_age": 15,
    "g_and_m_decimal_age": 15.01,
    "g_and_m_est_adult_height": 156.21,
    "g_and_m_est_adult_height_l_50": 153.91,
    "g_and_m_est_adult_height_l_90": 150.39,
    "g_and_m_est_adult_height_u_50": 158.51,
    "g_and_m_est_adult_height_u_90": 162.03,
    "g_and_m_height_velocity": 10,
    "g_and_m_khamis_roche_status": "on time",
    "g_and_m_maturity_offset": -6.88873995,
    "g_and_m_maturity_offset_status": "late",
    "g_and_m_percent_adult_height_att": 91.64,
    "g_and_m_percent_adult_height_z": -0.79144,
    "g_and_m_phv_age": 21.599,
    "g_and_m_phv_date": "2030-10-09T16:47:20Z",
    "g_and_m_seated_height_ratio": 10,
    "g_and_m_weight_velocity": 12,
    "most_recent_measurement": "2023-11-21T16:47:20Z",
    "position": "Forward",
  },
  Object {
    "athlete_id": 81233,
    "bio_age": 15,
    "g_and_m_decimal_age": 15.01,
    "g_and_m_est_adult_height": 170.53,
    "g_and_m_est_adult_height_l_50": 168.23,
    "g_and_m_est_adult_height_l_90": 164.71,
    "g_and_m_est_adult_height_u_50": 172.83,
    "g_and_m_est_adult_height_u_90": 176.35,
    "g_and_m_height_velocity": 10,
    "g_and_m_khamis_roche_status": "on time",
    "g_and_m_maturity_offset": -4.51152788,
    "g_and_m_maturity_offset_status": "late",
    "g_and_m_percent_adult_height_att": 89.28,
    "g_and_m_percent_adult_height_z": -1.42246,
    "g_and_m_phv_age": 19.222,
    "g_and_m_phv_date": "2028-05-25T16:47:24Z",
    "g_and_m_seated_height_ratio": 10,
    "g_and_m_weight_velocity": 12,
    "most_recent_measurement": "2023-11-21T16:47:24Z",
    "position": "Forward",
  },
]
`;
